--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -39,6 +39,7 @@ button {
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  animation: modal-close 0.5s forwards;
 }
 .popup-modal p {
   margin-bottom: 24px
@@ -55,9 +56,29 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  animation: modal-open 0.5s forwards;
 }
 
 .backdrop.show {
   opacity: 30%;
 }
 
+@keyframes modal-open {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -70%);
+  } to {
+    opacity: 1;
+    transform: translate(-50%,-50%);
+  }
+}
+
+@keyframes modal-close {
+  from {
+    opacity: 1;
+    transform: translate(-50%,-50%);
+  } to {
+    opacity: 0;
+    transform: translate(-50%, -70%);
+  }
+}
