--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -45,4 +45,23 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+}
+
+.left-links {
+  display: flex;
+  gap: 8px;
+}
+
+.right-links {
+  display: flex;
+  gap: 8px;
 }
