Flex ex 6 completed

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+html, body  {
+  box-sizing: border-box;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+}
+
+.container {
+  box-sizing: border-box;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  gap: 8px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 img {
@@ -16,6 +41,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  height: 24px;
 }
 
 input {
@@ -24,4 +50,38 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #eee;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header, .footer {
+  flex-grow: 0;
+  flex-shrink: 0;
+  font-size: 14px;
+  padding: 0 20px;
+}
+
+.content {
+  flex-grow: 1;
+}
+
+.left-links, .right-links {
+  padding: 0;
+  gap: 16px;
 }
