--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -45,3 +45,44 @@ body, html {
 .footer {
   background-color: #393f4d;
 }
+
+
+/* Solution */
+
+.container {
+  display: grid;
+  grid-template-columns: 25% 75%;
+  /* grid-template-rows: 25% 25% 25% 25%; */
+  grid-template-rows: 12.5% 12.5% 62.5% 12.5%;
+  gap: 15px;
+}
+
+.header {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.footer {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row: 5;
+}
+
+.sidebar {
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 2;
+  grid-row-end: 5;
+}
+
+.article {
+  grid-column: 2;
+  grid-row: 3 / 5;
+}
+
+.nav {
+  grid-column: 2;
+  grid-row: 2 / 3;
+}
