--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .container {
   text-align: center;
 }
@@ -88,4 +92,75 @@
 .footer p {
   font-size: 13px;
   font-weight: normal;  
+}
+
+/* Solution */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
+}
+
+/* header */
+.header {
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.header .logo {
+  justify-self: start;
+}
+
+.menu {
+  align-self: center;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+/* sidebar */
+
+.sidebar {
+  gap: 50px;
+  grid-row: 2 / 4;
+  display: grid;
+  place-items: center;
+}
+
+.side-content, .photo {
+  display: grid;
+}
+
+/* nav */
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+/* article */
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px
+}
+
+.article .card {
+  min-height: 200px;
+}
+
+.card p {
+  padding: 3px;
+}
+
+
+/* footer */
+.footer {
+  grid-column: 1 / 3;
+  display: grid;
 }
